--- a/HMI/src/com/tvis/PickProces.form
+++ b/HMI/src/com/tvis/PickProces.form
@@ -113,18 +113,18 @@
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Klant ID: 22"/>
+                      <text value="Klant ID: 1234"/>
                     </properties>
                   </component>
-                  <component id="3321d" class="javax.swing.JLabel">
+                  <component id="3321d" class="javax.swing.JLabel" binding="datum">
                     <constraints>
                       <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Date: 22-04-2022"/>
+                      <text value="Datum: ?"/>
                     </properties>
                   </component>
-                  <component id="7d353" class="javax.swing.JLabel">
+                  <component id="7d353" class="javax.swing.JLabel" binding="aantalDozen">
                     <constraints>
                       <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
