--- a/HMI/src/com/tvis/PickProcesMonitor.form
+++ b/HMI/src/com/tvis/PickProcesMonitor.form
@@ -60,14 +60,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="eab76" class="javax.swing.JTable" binding="table1" default-binding="true">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
           <grid id="16fbd" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="10" left="10" bottom="0" right="0"/>
             <constraints>
@@ -89,51 +81,49 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Klant ID: 22"/>
+                  <text value="Klant ID: 1234"/>
                 </properties>
               </component>
-              <component id="80334" class="javax.swing.JLabel">
+              <component id="80334" class="javax.swing.JLabel" binding="date">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Date: 22-04-2022"/>
+                  <text value="Datum: ?"/>
                 </properties>
               </component>
-              <component id="44fe9" class="javax.swing.JLabel">
+              <component id="44fe9" class="javax.swing.JLabel" binding="aantalDozen">
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Dozen: 3"/>
+                  <text value="Dozen: ?"/>
                 </properties>
               </component>
             </children>
           </grid>
-        </children>
-      </grid>
-      <grid id="944cc" binding="packMonitorPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="10"/>
-        <constraints>
-          <grid row="4" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <scrollpane id="5f39f">
+          <scrollpane id="70b4c">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="cef9b" class="javax.swing.JTable" binding="table2" default-binding="true">
+              <component id="eab76" class="javax.swing.JTable" binding="productTable">
                 <constraints/>
                 <properties/>
               </component>
             </children>
           </scrollpane>
         </children>
+      </grid>
+      <grid id="944cc" binding="packMonitorPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+        <constraints>
+          <grid row="4" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children/>
       </grid>
       <grid id="fd700" binding="pickMonitorPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
