--- a/HMI/src/com/tvis/PickProcesMonitor.form
+++ b/HMI/src/com/tvis/PickProcesMonitor.form
@@ -37,12 +37,12 @@
               <text value="Stop Proces"/>
             </properties>
           </component>
-          <component id="28f63" class="javax.swing.JButton" binding="pauseProcesButton" default-binding="true">
+          <component id="28f63" class="javax.swing.JButton" binding="resetProcesButton">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Pause Proces"/>
+              <text value="Reset Proces"/>
             </properties>
           </component>
           <hspacer id="d2d63">
