--- a/HMI/src/com/tvis/MainFrame.form
+++ b/HMI/src/com/tvis/MainFrame.form
@@ -71,7 +71,7 @@
       </component>
       <vspacer id="d1414">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="3e98b" class="javax.swing.JLabel">
@@ -88,7 +88,9 @@
         </constraints>
         <properties>
           <text value="Pack Robot"/>
-        <component id="819ba" class="javax.swing.JLabel" binding="checkOrderMessage">
+        </properties>
+      </component>
+      <component id="819ba" class="javax.swing.JLabel" binding="checkOrderMessage">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
